<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.rosenvold</groupId>
  <artifactId>jz11</artifactId>
  <packaging>jar</packaging>
  <version>1.0</version>
  <!-- -->
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
    </dependency>
    <dependency>
      <groupId>commons-lang</groupId>
      <artifactId>commons-lang</artifactId>
      <version>2.2</version>
    </dependency>
    <dependency>
      <groupId>javax.inject</groupId>
      <artifactId>javax.inject</artifactId>
      <version>1</version>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>1.8.5</version>
    </dependency>
    <dependency>
      <groupId>joda-time</groupId>
      <artifactId>joda-time</artifactId>
      <version>1.6</version>
    </dependency>
  </dependencies>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>2.0.2</version>
          <configuration>
            <encoding>ISO-8859-1</encoding>
            <source>${jdk.version}</source>
            <target>${jdk.version}</target>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.9</version>
        <configuration>
          <argLine>-client -Xmx512m -XX:MaxPermSize=192m -Djava.awt.headless=true</argLine>
          <excludes>
            <exclude>**/**/VelgMiddagActionTest.java</exclude>
          </excludes>
          <includes>
            <include>**/*Test.java</include>
            <include>**/*TestSuite.java</include>
          </includes>
          <forkMode>once</forkMode>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <properties>
    <jdk.version>1.6</jdk.version>
    <springframework.version>3.0.5.RELEASE</springframework.version>
    <jetty.version>6.1.19</jetty.version>
    <jetty.api.version>6.1.14</jetty.api.version>
    <struts.version>2.2.3</struts.version>
  </properties>

</project>
